hrhouz-ecr-ec2/secgrp.tf
# Create security group
resource "aws_security_group" "hrhouz-sg" {
  name        = "${var.name}-sg"
  description = "Allow inbound SSH and HTTP traffic"

  vpc_id = aws_vpc.hrhouz-vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
